<resources>
    <string name="app_name">The Better Student</string>
    <string name="grade5">Grade 5</string>
    <string name="grade4">Grade 4</string>
    <string name="grade3">Grade 3</string>
    <string name="grade2">Grade 2</string>
    <string name="average">average</string>
    <string name="student_A">Student A</string>
    <string name="student_B">Student B</string>
    <string name="which_better">Which one is better?</string>
    <string name="reset">Reset all</string>
    <string name="score">0</string>

</resources>
